; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_exit.c_reap_if_needed.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_exit.c_reap_if_needed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task = type { i32 }

@WUNTRACED_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task*, i32, i32, i32)* @reap_if_needed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reap_if_needed(%struct.task* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.task*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.task* %0, %struct.task** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load %struct.task*, %struct.task** %6, align 8
  %11 = call i32 @task_is_leader(%struct.task* %10)
  %12 = call i32 @assert(i32 %11)
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @WUNTRACED_, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %23

17:                                               ; preds = %4
  %18 = load %struct.task*, %struct.task** %6, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i64 @notify_if_stopped(%struct.task* %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %17
  store i32 1, i32* %5, align 4
  br label %31

23:                                               ; preds = %17, %4
  %24 = load %struct.task*, %struct.task** %6, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i64 @reap_if_zombie(%struct.task* %24, i32 %25, i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %23
  store i32 1, i32* %5, align 4
  br label %31

30:                                               ; preds = %23
  store i32 0, i32* %5, align 4
  br label %31

31:                                               ; preds = %30, %29, %22
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @task_is_leader(%struct.task*) #1

declare dso_local i64 @notify_if_stopped(%struct.task*, i32) #1

declare dso_local i64 @reap_if_zombie(%struct.task*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
